# sonia-flexbe

./: CMakeLists.txt  Dockerfile  README.md  package.xml  version.xml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: docker-image-perception-develop.yml  docker-image-perception-feature.yml  docker-image-perception-fix.yml  docker-image-perception-fixyml  docker-image-perception-master.yml
launch/: sonia-flexbe.launch  sonia_flexbe_setup.launch
scripts/: setup.sh
sonia_behaviors/sonia_flexbe_behaviors/manifest/: example_behavior.xml
src/sonia_flexbe/: sonia_flexbe.py
